@@ -2,23 +2,18 @@ package me.carlosalmanzab.wardenpos.backend.core.config;
 
 import com.fasterxml.uuid.Generators;
 import java.util.UUID;
-import org.jooq.Field;
+import org.jooq.*;
 import org.jooq.Record;
-import org.jooq.RecordContext;
-import org.jooq.Table;
-import org.jooq.UniqueKey;
-import org.jooq.impl.DefaultRecordListener;
+import org.springframework.stereotype.Component;
 
-public class UUIDv7RecordListener extends DefaultRecordListener {
+@Component
+public class UUIDv7RecordListener implements RecordListener {
 
   @Override
   public void insertStart(RecordContext ctx) {
     Record record = ctx.record();
     if (record instanceof org.jooq.TableRecord<?> tableRecord) {
       Table<?> table = tableRecord.getTable();
-      if (table == null) {
-        return;
-      }
 
       UniqueKey<?> primaryKey = table.getPrimaryKey();
       if (primaryKey == null) {
@@ -27,12 +22,16 @@ public class UUIDv7RecordListener extends DefaultRecordListener {
 
       // Auto-generate UUID only for single-column primary keys
       if (primaryKey.getFields().size() == 1) {
-        Field<?> field = primaryKey.getFields().get(0);
+        Field<?> field = primaryKey.getFields().getFirst();
         if (field.getType().equals(UUID.class)) {
           Object currentValue = tableRecord.get(field);
           if (currentValue == null) {
-            UUID uuidv7 = Generators.timeBasedEpochGenerator().generate();
-            tableRecord.set((Field<UUID>) field, uuidv7);
+            UUID uuid7 = Generators.timeBasedEpochGenerator().generate();
+
+            @SuppressWarnings("unchecked")
+            Field<UUID> uuidField = (Field<UUID>) field;
+
+            tableRecord.set(uuidField, uuid7);
           }
         }
       }
